[package]
name = "lief-patchelf"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
lief = { path = "../../api/rust/cargo/lief" }
anyhow = "1.0.86"
clap  = { version="4.5.40" }
clap_complete = "4.5.54"
thiserror = "2.0.11"
indoc = "2"
clap_mangen = "0.2.27"
