[workspace.package]
authors     = ["Romain Thomas <me@romainthomas.fr>"]
license     = "Apache-2.0"
description = "Official Rust bindings for LIEF."
readme      = "README.md"
version     = "0.15.1"
homepage    = "https://lief.re"
keywords    = ["ELF", "PE", "Mach-O", "reverse-engineering"]
repository  = "https://github.com/lief-project/LIEF"
categories  = [
  "api-bindings",
  "development-tools::debugging",
  "development-tools::profiling",
  "development-tools::build-utils",
  "parsing"
]

[workspace]
members = [
    "lief-ffi",
    "lief",
    "lief-ffigen",
]
default-members = [
    "lief",
]
resolver = "2"
