[workspace.package]
authors     = ["Romain Thomas <me@romainthomas.fr>"]
license     = "Apache-2.0"
description = "Official Rust bindings for LIEF."
readme      = "README.md"
version     = "1.0.0"
edition     = "2024"
homepage    = "https://lief.re"
keywords    = ["ELF", "PE", "Mach-O", "reverse-engineering"]
repository  = "https://github.com/lief-project/LIEF"
categories  = [
  "api-bindings",
  "development-tools::debugging",
  "development-tools::profiling",
  "development-tools::build-utils",
  "parsing"
]

rust-version = "1.85.0"

[workspace]
members = [
    "lief-ffi",
    "lief",
    "lief-build",
    "lief-ffigen",
]
default-members = [
    "lief",
]
resolver = "3"

[workspace.dependencies]
bitflags         = "2.4"
clap             = { version = "4.6", features = ["derive"] }
cxx              = { version = "=1.0.194", features = ["c++17"] }
cxx-gen          = "=0.7.194"
git-version      = "0.3"
miette           = { version = "7.6", features = ["fancy"] }
num-bigint       = "0.4"
num-derive       = "0.4"
num-traits       = "0.2"
proc-macro2      = "1.0"
reqwest          = { version = "0.13", default-features = false, features = ["blocking"] }
semver           = "1.0"
serde            = "1.0"
tempfile         = "3.14"
thiserror        = "2.0"
zip              = { version = "7.2", default-features = false, features = ["deflate", "time"] }

lief             = { version = "1.0.0", path = "lief" }
lief-ffi         = { version = "1.0.0", path = "lief-ffi" }
lief-build       = { version = "1.0.0", path = "lief-build" }
